--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section class="apresentacao">
             <article class="article-container">
                 <figura>
-                    <img class="foto-perfil"src="C:\Users\belam\OneDrive\Área de Trabalho\Modulo II - HTM e CSS\ProjetoFinal\img\fotperfilPretalab.jpeg" alt="foto perfil"/> 
+                    <img class="foto-perfil" src="C:\Users\belam\Projeto-final1\img\fotperfilPretalab.jpeg" alt="foto perfil"> 
                 </figura>
                 <div>
                     <h1>Isabela Meyce</h1>
