--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <article class="article-container">
                 <figura>
 
-                    <img class="foto-perfil" src= "C:\Users\belam\Projeto-final1\img\fotperfilPretalab.jpeg"alt="foto perfil"> 
+                    <img class="foto-perfil" src= "img\fotperfilPretalab.jpeg" alt="foto perfil"> 
                 </figura>
                 
                 <div>
