--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <header>
-        <nav
-            <ul id = "MenuNavegação">
+        <nav>
+             <ul id="MenuNavegação">
                 <li><a href="#formacao">Formação</a></li>
                 <li><a href="#meusprojetos">Meus projetos</a></li>
                 <li><a href="#contato">Contato</a></li>
@@ -24,7 +24,7 @@
             <article class="article-container">
                 <figura>
 
-                    <img class="foto-perfil" src= "img\fotperfilPretalab.jpeg" alt="foto perfil"> 
+                    <img class="foto-perfil" src="img\fotperfilPretalab.jpeg"  alt="foto perfil"> 
                 </figura>
                 
                 <div>
