--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Meu Portifolio</title>
+    <title>Portifólio Isabela Meyce</title>
+    <link rel = "personal icon" href="img\fotperfilPretalab.jpeg">
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" href="https://cdn.es.gov.br/fonts/font-awesome/css/font-awesome.min.css"/>
 
